[package]
name = "redpanda-http-rust"
version = "0.0.1"
edition = "2021"
license = "Apache License"
description = "Client library for consuming the HTTP api of RedPanda, meant to be extended for edge devices, currently ESP32 and WASM"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
reqwest = { version = "0.11", features = ["json","blocking"], optional=true}

[features]
defaults = []
reqwest = ["dep:reqwest"]