[package]
name = "redpanda-http-rust"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Client library for consuming the HTTP api of RedPanda, meant to be extended for edge devices, currently ESP32 and WASM"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
reqwest = { version = "0.11", features = ["json","blocking"], optional=true}
esp-idf-svc = { version = "0.46.0", features = ["experimental"], optional = true }
esp-idf-hal = { version="0.41.1", optional=true}
esp-idf-sys = { version = "0.33", optional=true }
embedded-svc = { version = "0.25.0", optional=true }
embedded-hal = { version = "1.0.0-alpha.10", optional=true  }

# Useful crate to handle errors.
anyhow = {version="1", optional=true}
# Crate to simplify working with bytes.
bytes = {version="1", optional=true}
# General-purpose crate with common HTTP types.
http = {version="0.2", optional=true}
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v0.9.0", optional=true }
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba", optional=true }




[features]
reqwest = ["dep:reqwest"]
esp32 = ["dep:esp-idf-svc", "dep:esp-idf-hal", "dep:esp-idf-sys", "dep:embedded-svc", "dep:embedded-hal"]
spin = ["dep:anyhow","dep:bytes","dep:http","dep:spin-sdk","dep:wit-bindgen-rust"]

