[package]
name = "redpanda-http"
version = "0.0.4"
edition = "2021"
license = "Apache-2.0"
authors = ["Frank Lyaruu <flyaruu@gmail.com>"]
description = "Client library for consuming the HTTP api of RedPanda, meant to be extended for edge devices, currently ESP32 and WASM"


[dependencies]
base64 = "0.21.0"
log = "0.4.19"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
simplehttp = { version = "0.0.4"}
thiserror = "1.0.44"

